--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,19 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-        {
-            "type": "java",
-            "name": "Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
         {
             "type": "java",
             "name": "Main",
             "request": "launch",
             "mainClass": "Main",
-            "projectName": "Library-Management-System_149b088",
+            "projectName": "Library-Management-System_149b088"
+        },
+        {
+            "type": "java",
+            "name": "Current File",
+            "request": "launch",
+            "mainClass": "${file}",
             "classPaths": [
                 "lib/mysql-connector-j-9.0.0.jar"
             ]
