--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
       <artifactId>flatlaf</artifactId>
       <version>3.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
